# lab_docker

./: .env  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: app.py
db/: init.sql
homework/: CMakeLists.txt
homework/formatter_ex_lib/: CMakeLists.txt
homework/formatter_lib/: CMakeLists.txt
homework/hello_world_application/: CMakeLists.txt
homework/solver_application/: CMakeLists.txt  equation.cpp
homework/solver_lib/: CMakeLists.txt  solver.cpp
